Refactored the code overall to match the best practices, updated main class structure and updated libraries